outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_00-23-35/evaluations/problem_eval3486037955368895582_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of proximity to the next node and the average distance to the destination based on the remaining unvisited nodes, ensuring a balance between immediate gains and long-term efficiency. The algorithm calculates a score using a weighted combination of the current distance, the average distance to the destination, and a novelty factor that considers the number of remaining nodes, then selects the node with the highest score.}
                                                                                                                                                                                                                                                                                                                                                                                                                                                      ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of proximity to the next node and the average distance to the destination based on the remaining unvisited nodes, ensuring a balance between immediate gains and long-term efficiency. The algorithm calculates a score using a weighted combination of the current distance, the average distance to the destination, and a novelty factor that considers the number of remaining nodes, then selects the node with the highest score.}
                                                                                                                                                                                                                                                                                                                                                                                                                                                      ^
SyntaxError: unmatched '}'
